--- a/src/main/webapp/script/vista/Edit.xhtml
+++ b/src/main/webapp/script/vista/Edit.xhtml
@@ -5,11 +5,11 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui"
-       xmlns:itcs="http://java.sun.com/jsf/composite/components/filterView">
+       xmlns:go="http://java.sun.com/jsf/composite/go">
 
     <ui:composition template="/script/template_inbox.xhtml">
         <ui:define name="title">
-            <h:outputText value="Editar Vista de Casos"></h:outputText>
+            <h:outputText value="#{bundle.EditVistaTitle}"></h:outputText>
         </ui:define>
 
         <ui:define name="west">
@@ -25,7 +25,7 @@
         <ui:define name="body">
            
             <h:form id="form">
-                <h1>Editar Vista de Casos</h1>
+                <h1>#{bundle.EditVistaTitle}</h1>
                 <p:messages id="messages"/>
                 <h:panelGrid columns="2">
                     <h:outputLabel value="#{bundle.VistaLabel_nombre}" for="nombre" style="font-weight: bold"/>
@@ -35,7 +35,7 @@
 
                     <h:outputLabel value="Criterios:" style="font-weight: bold"/>
 
-                     <itcs:filterView id="panelFilter0" controllerMBean="#{vistaController}" filterHelper="#{vistaController.filterHelper2}" showApplyAction="false"
+                     <go:filterView id="panelFilter0" controllerMBean="#{vistaController}" filterHelper="#{vistaController.filterHelper2}" showApplyAction="false"
                                          update=":mainform:messages :form:panelFilter0:panelFilter :form"/>
 
 
