--- a/src/main/webapp/script/caso/responder.xhtml
+++ b/src/main/webapp/script/caso/responder.xhtml
@@ -28,40 +28,134 @@
 
             <h:panelGrid width="100%">
 
-                <p:panelGrid styleClass="filtersGrid" style="width: 100%;">
+                <p:panel id="panel1" style="border: 0px; padding: 0px;">
 
+                    <p:panelGrid styleClass="filtersGrid">
+                        <p:row>
+                            <p:column>
+                                <h:panelGroup>
+                                    <p:selectBooleanButton id="enviarPorEmail" value="#{casoController.replyByEmail}"
+                                                           onLabel="Enviar por email" offLabel="Comentario" 
+                                                           onIcon="ui-icon-mail-closed" offIcon="ui-icon-comment">
+                                        <p:ajax process="@this"
+                                                update=":inputPanel:formCreateNota:panel1 :inputPanel:formCreateNota:panelbuttons"/>  
+                                    </p:selectBooleanButton>
+
+                                    <p:selectBooleanButton id="textoNotaVisibilidadPublica" rendered="#{not casoController.replyByEmail}"
+                                                           onLabel="Público" offLabel="Privado" 
+                                                           onIcon="ui-icon-check" offIcon="ui-icon-close"
+                                                           value="#{casoController.textoNotaVisibilidadPublica}" />
+
+                                </h:panelGroup>
+                                <p:tooltip for="enviarPorEmail" value="¿Responder o comentar?"/>
+                            </p:column>
+                            <p:column>
+                                <h:panelGrid columns="2">
+                                    <p:selectOneMenu id="clipping" value="#{casoController.selectedClipping}" filter="true" filterMatchMode="contains">
+                                        <f:selectItem itemValue="" itemLabel="#{bundle.textoPredefinido}" />
+                                        <f:selectItems value="#{clippingController.itemsAvailableSelectMany}"/>
+                                        <p:ajax update="textonota" process="@parent" listener="#{casoController.handleClippingSelectChangeEvent}" />
+                                    </p:selectOneMenu>
+                                </h:panelGrid>
+                            </p:column>
+                        </p:row>
+                    </p:panelGrid>
+                    
+                    <p:panel id="paneldest" style="border: 0px; padding: 0px;" rendered="#{casoController.replyByEmail}">
+                    <p:panelGrid styleClass="filtersGridParaOtroEmail" id="panelParaOtroEmail" style="width: 100%; border: 2px;" >
+                        <p:row>
+
+                            <p:column colspan="1">
+                                <p:column>
+                                    <p:menuButton value="para:" id="menucc" style="background: transparent;">
+
+                                        <p:menuitem id="menuitemcc" update=":inputPanel:formCreateNota:menucc :inputPanel:formCreateNota:panelcc" value="CC" actionListener="#{casoController.changeCCO(true)}" process="@this" icon="#{casoController.cc ? 'fa fa-check-square-o':'fa fa-square-o'}"/>
+                                        <p:menuitem id="menuitemcco" update=":inputPanel:formCreateNota:menucc :inputPanel:formCreateNota:panelcco" value="CCO" actionListener="#{casoController.changeCCO(false)}" process="@this" icon="#{casoController.cco ? 'fa fa-check-square-o':'fa fa-square-o'}"/>
+
+                                    </p:menuButton>
+                                </p:column>
+                            </p:column >
+                            <p:column colspan="10">
+                                <p:autoComplete style="width: 100%;" id="otroEmail" multiple="true" value="#{casoController.otroEmail}" completeMethod="#{emailClienteController.completeEmailClienteString}"
+                                                var="email"  itemValue="#{email}" itemLabel="#{email}"  forceSelection="false">
+                                </p:autoComplete>
+                                <p:watermark for="otroEmail" value="email destino"/>
+                            </p:column>
+                        </p:row>
+                    </p:panelGrid>
+                </p:panel>
+                <p:panel id="panelcc" rendered="#{casoController.replyByEmail and casoController.cc}" style="border: 0px; padding: 0px;">
+                    <p:panelGrid styleClass="filtersGridParaOtroEmail" style="width: 100%; " >
+                        <p:row>
+
+                            <p:column colspan="1">
+                                <p:outputLabel value="cc:" for="otroEmailcc"/>
+                            </p:column >
+                            <p:column colspan="10">
+                                <p:autoComplete style="width: 100%;" id="otroEmailcc" multiple="true" value="#{casoController.ccEmail}" completeMethod="#{emailClienteController.completeEmailClienteString}"
+                                                var="email"  itemValue="#{email}" itemLabel="#{email}"  forceSelection="false">
+                                </p:autoComplete>
+                                <p:watermark for="otroEmail" value="email destino"/>
+                            </p:column>
+                        </p:row>
+                    </p:panelGrid>
+                </p:panel>
+                <p:panel id="panelcco" rendered="#{casoController.replyByEmail and casoController.cco}" style="border: 0px; padding: 0px;">
+                    <p:panelGrid styleClass="filtersGridParaOtroEmail" style="width: 100%; " >
+                        <p:row>
+                            <p:column colspan="1">
+                                <p:outputLabel value="cco:" for="otroEmailcco"/>
+                            </p:column >
+                            <p:column colspan="10">
+                                <p:autoComplete style="width: 100%;" id="otroEmailcco" multiple="true" value="#{casoController.ccoEmail}" completeMethod="#{emailClienteController.completeEmailClienteString}"
+                                                var="email"  itemValue="#{email}" itemLabel="#{email}"  forceSelection="false">
+                                </p:autoComplete>
+                                <p:watermark for="otroEmail" value="email destino"/>
+                            </p:column>
+                        </p:row>
+                    </p:panelGrid>
+                </p:panel>
+
+                </p:panel>
+
+
+
+                <h:panelGrid columns="4">
+                    <p:message for="nextResponseDue1"/>
+                    <p:message for="idSubEstadox"/>
+                    <p:message for="textonota"/>
+                </h:panelGrid>
+
+
+
+                
+
+
+                <pe:ckEditor id="textonota" value="#{casoController.textoNota}" language="es"
+                             toolbar="#{applicationBean.ckEditorToolbar}"
+                             required="true"  width="100%" />
+
+                <p:panelGrid styleClass="filtersGrid">
                     <p:row>
-                        <p:column>
+                        <p:column >
                             <h:panelGrid columns="2">
-                                <p:outputLabel for="clipping" value="#{bundle.textoPredefinido}" style="font-weight:bold"/>
-                                <p:selectOneMenu id="clipping" value="#{casoController.selectedClipping}" filter="true" filterMatchMode="contains">
-                                    <f:selectItems value="#{casoController.clippingsItemsAvailableSelectOne}"/>
-                                    <p:ajax update="textonota" process="@parent" listener="#{casoController.handleClippingSelectChangeEvent}" />
-                                </p:selectOneMenu>
+                                <p:selectBooleanCheckbox id="addHistory" value="#{casoController.incluirHistoria}" />
+                                <p:outputLabel value="Agregar historia" for="addHistory" style="font-weight:bold"/>
                             </h:panelGrid>
                         </p:column>
-                        <p:column>
 
+                        <p:column >
                             <h:panelGrid columns="2">
-                                <p:selectBooleanButton id="enviarPorEmail" value="#{casoController.replyByEmail}"
-                                                       onLabel="Enviar por email" offLabel="Comentario" 
-                                                       onIcon="ui-icon-mail-closed" offIcon="ui-icon-comment">
-                                    <p:ajax process="@this"
-                                            update=":inputPanel:formCreateNota:message-details-reply"/>  
-                                </p:selectBooleanButton>
-
-                                <p:selectBooleanButton id="textoNotaVisibilidadPublica" rendered="#{not casoController.replyByEmail}"
-                                                       onLabel="Público" offLabel="Privado" 
-                                                       onIcon="ui-icon-check" offIcon="ui-icon-close"
-                                                       value="#{casoController.textoNotaVisibilidadPublica}" />
-
+                                <p:selectBooleanCheckbox id="adjuntarArchivosARespuesta" value="#{casoController.adjuntarArchivosARespuesta}" 
+                                                         disabled="#{casoController.cantidadAttachment() le 0}">
+                                    <p:ajax update=":inputPanel:formCreateNota:parchivos" process="@this"/>  
+                                </p:selectBooleanCheckbox>
+                                <p:outputLabel for="adjuntarArchivosARespuesta" value="#{bundle.adjuntarArchivosARespuesta}" style="font-weight:bold"/>
                             </h:panelGrid>
-                            <p:tooltip for="enviarPorEmail" value="¿Responder o comentar?"/>
-
-
                         </p:column>
 
                     </p:row>
+
                     <p:row>
                         <p:column >
                             <h:panelGrid columns="2">  
@@ -87,91 +181,8 @@
                             </h:panelGrid>
                         </p:column>
                     </p:row>
+
                 </p:panelGrid>
-
-
-                <h:panelGrid columns="4">
-                    <p:message for="nextResponseDue1"/>
-                    <p:message for="idSubEstadox"/>
-                    <p:message for="textonota"/>
-                </h:panelGrid>
-
-
-
-                <p:panel id="paneldest" style="border: 0px; padding: 0px;" visible="#{casoController.replyByEmail}">
-                    <p:panelGrid styleClass="filtersGridParaOtroEmail" id="panelParaOtroEmail" style="width: 100%; border: 2px;" >
-                        <p:row>
-
-                            <p:column colspan="1">
-                                <p:column>
-                                    <p:menuButton value="para:" id="menucc" style="background: transparent;">
-
-                                        <p:menuitem id="menuitemcc" update=":inputPanel:formCreateNota:menucc :inputPanel:formCreateNota:panelcc" value="CC" actionListener="#{casoController.changeCCO(true)}" process="@this" icon="#{casoController.cc ? 'fa fa-check-square-o':'fa fa-square-o'}"/>
-                                        <p:menuitem id="menuitemcco" update=":inputPanel:formCreateNota:menucc :inputPanel:formCreateNota:panelcco" value="CCO" actionListener="#{casoController.changeCCO(false)}" process="@this" icon="#{casoController.cco ? 'fa fa-check-square-o':'fa fa-square-o'}"/>
-
-                                    </p:menuButton>
-                                </p:column>
-                            </p:column >
-                            <p:column colspan="10">
-                                <p:autoComplete style="width: 100%;" id="otroEmail" multiple="true" value="#{casoController.otroEmail}" completeMethod="#{emailClienteController.completeEmailClienteString}"
-                                                var="email"  itemValue="#{email}" itemLabel="#{email}"  forceSelection="false">
-                                </p:autoComplete>
-                                <p:watermark for="otroEmail" value="email destino"/>
-                            </p:column>
-                        </p:row>
-                    </p:panelGrid>
-                </p:panel>
-                <p:panel id="panelcc" visible="#{casoController.replyByEmail and casoController.cc}" style="border: 0px; padding: 0px;">
-                    <p:panelGrid styleClass="filtersGridParaOtroEmail" style="width: 100%; " >
-                        <p:row>
-
-                            <p:column colspan="1">
-                                <p:outputLabel value="cc:" for="otroEmailcc"/>
-                            </p:column >
-                            <p:column colspan="10">
-                                <p:autoComplete style="width: 100%;" id="otroEmailcc" multiple="true" value="#{casoController.ccEmail}" completeMethod="#{emailClienteController.completeEmailClienteString}"
-                                                var="email"  itemValue="#{email}" itemLabel="#{email}"  forceSelection="false">
-                                </p:autoComplete>
-                                <p:watermark for="otroEmail" value="email destino"/>
-                            </p:column>
-                        </p:row>
-                    </p:panelGrid>
-                </p:panel>
-                <p:panel id="panelcco" visible="#{casoController.replyByEmail and casoController.cco}" style="border: 0px; padding: 0px;">
-                    <p:panelGrid styleClass="filtersGridParaOtroEmail" style="width: 100%; " >
-                        <p:row>
-                            <p:column colspan="1">
-                                <p:outputLabel value="cco:" for="otroEmailcco"/>
-                            </p:column >
-                            <p:column colspan="10">
-                                <p:autoComplete style="width: 100%;" id="otroEmailcco" multiple="true" value="#{casoController.ccoEmail}" completeMethod="#{emailClienteController.completeEmailClienteString}"
-                                                var="email"  itemValue="#{email}" itemLabel="#{email}"  forceSelection="false">
-                                </p:autoComplete>
-                                <p:watermark for="otroEmail" value="email destino"/>
-                            </p:column>
-                        </p:row>
-                    </p:panelGrid>
-                </p:panel>
-
-
-                <pe:ckEditor id="textonota" value="#{casoController.textoNota}" language="es"
-                             toolbar="#{applicationBean.ckEditorToolbar}"
-                             required="true"  width="100%" />
-
-                <h:panelGrid columns="2">
-                    <h:panelGrid columns="2">
-                        <p:selectBooleanCheckbox id="addHistory" value="#{casoController.incluirHistoria}" />
-                        <p:outputLabel value="Agregar historia" for="addHistory" style="font-weight:bold"/>
-                    </h:panelGrid>
-
-                    <h:panelGrid columns="2">
-                        <p:selectBooleanCheckbox id="adjuntarArchivosARespuesta" value="#{casoController.adjuntarArchivosARespuesta}" 
-                                                 disabled="#{casoController.cantidadAttachment() le 0}">
-                            <p:ajax update=":inputPanel:formCreateNota:parchivos" process="@this"/>  
-                        </p:selectBooleanCheckbox>
-                        <p:outputLabel for="adjuntarArchivosARespuesta" value="#{bundle.adjuntarArchivosARespuesta}" style="font-weight:bold"/>
-                    </h:panelGrid>
-                </h:panelGrid>
 
                 <p:panel id="parchivos" visible="#{casoController.adjuntarArchivosARespuesta}">
                     <h:panelGrid columns="2" >
@@ -186,7 +197,7 @@
                 </p:panel>
 
                 <br/>
-                <p:panel id="panelbuttons" style="border: 0px; padding: 0px;">
+                    <p:panel id="panelbuttons" style="border: 0px; padding: 0px;">
                     <h:panelGrid style="float: right" columns="2">
 
                         <p:commandLink action="#{casoController.disableReplyMode()}" styleClass="btn btn-default"
