--- a/src/main/webapp/mobile/index.xhtml
+++ b/src/main/webapp/mobile/index.xhtml
@@ -58,8 +58,8 @@
                 <p:growl  id="growl" />
 
                 <h:form id="vistasForm">
-                    <p:dataList type="ordered" value="#{vistaController.allVistasItems}" var="vista1" 
-                                rendered="#{not empty vistaController.visibleForAllItems}">
+                    <p:dataList type="ordered" value="#{casoController.getAllVistasItems(UserSessionBean.current)}" var="vista1" 
+                                emptyMessage="empty">
                         <p:column>                            
                             <p:commandLink id="link1" value="#{vista1.nombre}" style="font-weight: bold"
                                            update=":casosForm:casosDataList" action="pm:casos">
@@ -67,10 +67,9 @@
                             </p:commandLink>
                         </p:column>
                         <p:column>
-                            <h:outputText value="#{vistaController.countCasosForView(vista1)}" styleClass="ui-li-count"/>
+                            <h:outputText value="#{casoController.countItemsVista(vista1)}" styleClass="ui-li-count"/>
                         </p:column>
                     </p:dataList>
-                    <h:outputText value="No tiene ninguna vista creada." rendered="#{empty vistaController.visibleForAllItems}"/>
                 </h:form>
 
             </pm:content>
@@ -93,7 +92,7 @@
                                 <h3>#{item.tema}</h3>
                                 <p>#{item.owner.capitalName}</p>
                                 <p class="ui-li-aside"><h:outputText value="#{item.fechaCreacion}"><f:convertDateTime pattern="dd-MMM-yy"/></h:outputText></p>
-                                <f:setPropertyActionListener value="#{item}" target="#{casoController.currentCaso}" />
+                                <f:setPropertyActionListener value="#{item}" target="#{casoController.selected}" />
                             </p:commandLink>
                         </p:column>                     
                     </p:dataList>
